# learning-rust

./: Cargo.toml  README.md
async-downloads/: Cargo.toml  NOTES.md  README.md
async-downloads/src/: concurrent.rs  sequential.rs  with_progress.rs
src/: bounded.rs  downloader.rs  lib.rs  main.rs  retry.rs  streaming.rs  timeout.rs
tests/: downloads_test.rs  integration_test.rs
