[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
anyhow = "1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
